# Entreprise_MCP

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py
deploy/sql/: init.sql
